@@ -29,7 +29,9 @@ package org.hisp.dhis.analytics.event.data;
 
 import static java.util.Collections.emptyList;
 import static java.util.Optional.empty;
-import static java.util.stream.Collectors.*;
+import static java.util.stream.Collectors.counting;
+import static java.util.stream.Collectors.groupingBy;
+import static java.util.stream.Collectors.toList;
 import static org.apache.commons.collections4.CollectionUtils.isNotEmpty;
 import static org.apache.commons.lang3.StringUtils.EMPTY;
 import static org.apache.commons.lang3.StringUtils.joinWith;
@@ -68,6 +70,7 @@ import org.hisp.dhis.analytics.data.handler.SchemeIdResponseMapper;
 import org.hisp.dhis.analytics.event.EventQueryParams;
 import org.hisp.dhis.analytics.event.EventQueryValidator;
 import org.hisp.dhis.analytics.orgunit.OrgUnitHelper;
+import org.hisp.dhis.analytics.util.AnalyticsOrganisationUnitUtils;
 import org.hisp.dhis.analytics.util.AnalyticsUtils;
 import org.hisp.dhis.calendar.Calendar;
 import org.hisp.dhis.common.DimensionItemKeywords;
@@ -88,6 +91,7 @@ import org.hisp.dhis.common.ValueType;
 import org.hisp.dhis.option.Option;
 import org.hisp.dhis.organisationunit.OrganisationUnit;
 import org.hisp.dhis.period.PeriodType;
+import org.hisp.dhis.user.CurrentUserService;
 import org.hisp.dhis.user.User;
 
 /**
@@ -100,6 +104,8 @@ public abstract class AbstractAnalyticsService {
   protected final EventQueryValidator queryValidator;
 
   protected final SchemeIdResponseMapper schemeIdResponseMapper;
+
+  private final CurrentUserService currentUserService;
 
   /**
    * Returns a grid based on the given query.
@@ -383,20 +389,28 @@ public abstract class AbstractAnalyticsService {
 
       if (hasResults) {
         optionItems.addAll(
-            optionsPresentInGrid.values().stream()
-                .flatMap(Collection::stream)
-                .distinct()
-                .collect(toList()));
+            optionsPresentInGrid.values().stream().flatMap(Collection::stream).distinct().toList());
       } else {
         optionItems.addAll(getItemOptionsAsFilter(params.getItemOptions(), params.getItems()));
       }
 
+      Map<String, Object> items = new HashMap<>();
+      AnalyticsOrganisationUnitUtils.getUserOrganisationUnitItems(
+              currentUserService.getCurrentUser(), params.getUserOrganisationUnitsCriteria())
+          .forEach(items::putAll);
+
       if (params.isComingFromQuery()) {
-        metadata.put(ITEMS.getKey(), getMetadataItems(params, periodKeywords, optionItems, grid));
+        items.putAll(getMetadataItems(params, periodKeywords, optionItems, grid));
+      } else {
+        items.putAll(getMetadataItems(params));
+      }
+
+      metadata.put(ITEMS.getKey(), items);
+
+      if (params.isComingFromQuery()) {
         metadata.put(
             DIMENSIONS.getKey(), getDimensionItems(params, Optional.of(optionsPresentInGrid)));
       } else {
-        metadata.put(ITEMS.getKey(), getMetadataItems(params));
         metadata.put(DIMENSIONS.getKey(), getDimensionItems(params, empty()));
       }
 
